2007-03-02  Ray Strode  <rstrode@redhat.com>

	Patch from 
	Paolo Borelli <pborelli@katamail.com>

	* backends/markup-tree.c:
	* backends/xml-dir.c:
	* doc/gconf/gconf-sections.txt:
	* doc/gconf/tmpl/gconf-internals.sgml:
	* gconf/gconf-backend.c:
	* gconf/gconf-internals.[ch]:
	* gconf/gconfd.c:
	use g_file_test instead of home brew
	gconf_file_test and gconf_file_exists functions

2007-03-02  Ray Strode  <rstrode@redhat.com>

	Patch from 
	Paolo Borelli <pborelli@katamail.com>

	* gconf/gconf.c (gconf_clear_cache):
	Drop dead code (coverity 2208, bug 341724)

2007-03-02  Ray Strode  <rstrode@redhat.com>

	Patch from 
	Narayana Pattipati <narayana.pattipati@wipro.com>

	* backends/markup-tree.c (save_tree):
	transfer the file permissions and ownership after 
	rename (bug 314343).

2007-03-02  Ray Strode  <rstrode@redhat.com>

	* gconf/gconf-value.c (gconf_value_new_from_string):
	Check that type isn't a container type, since there
	would be no way to know what the type of its elements
	would be.  Based on patch from 
	Kjartan Maraas <kmaraas@gnome.org> (bug 309016).

============================= 2.16.1 ======================

2007-01-30  Kjartan Maraas  <kmaraas@gnome.org>

	* backends/evoldap-backend.c: (subst_variables): Fix a couple
	compiler warnings.

2007-01-25  Kjartan Maraas  <kmaraas@gnome.org>

	* gconf/gconf-client.c: (gconf_client_get_float),
	(gconf_client_get_int), (gconf_client_get_string),
	(gconf_client_get_bool), (gconf_client_get_schema),
	(gconf_client_get_list), (gconf_client_get_pair):
	Fix up the error handling again. Noticed by Richard Hult.
	Closes bug #360224 for good.

2007-01-24  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Bump version so we differ from the last released
	tarball.

2007-01-04  Tom Tromey  <tromey@redhat.com>

	* gconf/gconf-internals.c (gconf_activate_server): Close write end
	of pipe in parent process.  Bug #365416.

2006-11-23  Pascal Terjan  <pterjan@linuxfr.org>
